chapter_02/ToDo_app/redis/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-queue
  labels:
    app: redis-queue
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis-queue
  template:
    metadata:
      labels:
        app: redis-queue
    spec:
      containers:
      - name: redis-queue
        image: redis
        ports:
        - containerPort: 6379
