chapter_02/ToDo_app/redis/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-queue
spec:
  selector:
    app: redis-queue
  ports:
    - protocol: TCP
      port: 6379
