chapter_02/ToDo_app/redis/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: log-message-processor
spec:
  podSelector:
    matchLabels:
      app: log-message-processor
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          redis-access: "true"
    ports:
    - port: 6379
      protocol: TCP
